corrected wrong css property and removed alignment.h from bline bone and circle.cpp

--- a/synfig-studio/src/gui/resources/css/synfig.css
+++ b/synfig-studio/src/gui/resources/css/synfig.css
@@ -83,9 +83,9 @@
 }
 
 #gap {
-	margin-end : 3px;
+	margin-right : 3px;
 }
 
 #indentation{
-	margin-start : 6px;
+	margin-left : 6px;
 }
